<resources>
    <string name="viewSubject"> subject </string>
    <string name="sampleSubject">I am some subject </string>
    <string name="view">View</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="complaints">Type here</string>
    <string name="complaintsHeader">Complaints</string>
    <string name="app_name">B07project</string>
    <string name="expand">expand</string>
    <string name="viewComplaints">complaints</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="feedback">Feedback</string>
    <string name="rating">Rating</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_heading">Login to your account!</string>
    <string name="utorid_label">Email</string>
    <string name="enter_utorid">Enter your UTORid here...</string>
    <string name="password_label">Password</string>
    <string name="enter_password">Enter your password here...</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="register">Register</string>
    <string name="Register">REGISTER</string>
    <string name="register_heading">Register an account!</string>
    <string name="click_to_login">Click this text to go back to the login page.</string>
    <string name="click_to_register">Click this text to register.</string>
    <string name="logout">LOGOUT</string>
    <string name="general_image_description">cool image!</string>
    <string name="enter_event_info">Add an event!</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Enter event name...</string>
    <string name="participant_limit">Participant Limit</string>
    <string name="enter_event_participant_limit">Enter participant limit...</string>
    <string name="year">Year of event (In YYYY format please)</string>
    <string name="enter_event_year">YYYY</string>
    <string name="month">Month of event (In MM format please)</string>
    <string name="enter_event_month">MM</string>
    <string name="day">Day of event (In DD format please)</string>
    <string name="enter_event_day">DD</string>
    <string name="date">Date of Event (DD/MM/YYYY, please enter the numbers)</string>
    <string name="enter_event_date">Enter event date (DD/MM/YYYY)...</string>
    <string name="time">Time of event (24 hour clock).</string>
    <string name="enter_event_time">Enter event date (DD/MM/YYYY)...</string>
    <string name="hour">Hour of Event (24 hour clock time, HH format)</string>
    <string name="enter_event_hour">Enter hour (HH)...</string>
    <string name="minute">Minute of Event (mm format)</string>
    <string name="enter_event_minute">Enter minute (mm)...</string>
    <string name="AMPM">AM or PM</string>
    <string name="enter_event_meridiem">Enter AM or PM...</string>
    <string name="event_description">Event Description</string>
    <string name="enter_event_description">Enter event description...</string>
    <string name="schedule_event_button">Schedule Event</string>
    <string name="do_I_qualify_heading">Do I qualify for POSt?</string>
    <string name="do_I_qualify_CS_heading">Do I qualify for CS Major or Specialist POSt?</string>
    <string name="do_I_qualify_CS_minor_heading">Do I qualify for CS Minor POSt?</string>
    <string name="do_I_qualify_math_major_heading">Do I qualify for Math Major POSt?</string>
    <string name="do_I_qualify_math_specialist_heading">Do I qualify for Math Specialist POSt?</string>
    <string name="do_I_qualify_stats_heading">Do I qualify for Statistics POSt?</string>
    <string name="please_select_heading">Please select the category you are interested in.</string>
    <string name="please_answer_heading">Please answer the following.</string>
    <string name="computer_science_post">Computer Science (Specialist or Major)</string>
    <string name="computer_science_minor_post">Computer Science (Minor)</string>
    <string name="math_major_post">Mathematics Major</string>
    <string name="math_specialist_post">Mathematics Specialist</string>
    <string name="stats_post">Statistics (Both Specialist and Major)</string>
    <string name="go_back_button_text">Go Back</string>
    <string name="cs_first_question">
        Do you have a minimum GPA of 2.5 (70%) over the following courses?\n
         - Introduction to Computer Science II\n
         - Discrete Mathematics\n
         - Linear Algebra I for Mathematical Sciences\n
         - Calculus I for Mathematical Sciences\n
         - Calculus II for Mathematical Sciences</string>
    <string name="cs_second_question">
        Do you have a minimum grade of B (73-76%) in Introduction to Computer Science II?</string>
    <string name="cs_third_question">
        Do you have a minimum grade of C- (60-62%) in at least two of these courses?\n
        - Discrete Mathematics\n
        - Linear Algebra I for Mathematical Sciences\n
        - Calculus II for Mathematical Sciences</string>
    <string name="cs_minor_first_question">
        Have you completed a total of 4 credits?
    </string>
    <string name="cs_minor_second_question">
        Of those 4 credits, have you obtained credit in each of the following?:\n
        - Introduction to Computer Science I\n
        - Introduction to Computer Science II\n
        - Discrete Mathematics\n
        - Linear Algebra I for Mathematical Sciences OR MATA23, the alternative\n
        - AT LEAST ONE of the Calculus Is (MATA30, MATA31, MATA32)
    </string>
    <string name="CS_minor_disclaimer">
        Note: Even if you meet these requirements, you will be evaluated based on your grades in the following:\n
        - Introduction to Computer Science II\n
        - Discrete Mathematics\n
        - Linear Algebra I for Mathematical Sciences OR MATA23, the alternative\n
        \nIf you fulfill the above requirements and maximize your grades in the above 3 courses, your chances for getting into the CS Minor are better.
    </string>
    <string name="math_major_first_question">
        Do you have at least a GPA of 2.0 over the following courses?\n
        (Basically an average grade of 63% and above in terms of UTSC grading.)\n
        Discrete Mathematics\n
        Linear Algebra I for Mathematical Sciences\n
        Calculus I for Mathematical Sciences\n
        Calculus II for Mathematical Sciences</string>
    <string name="math_major_second_question">
        Do you have a minimum grade of B (73-76%) in at least one of the following?:\n
        Discrete Mathematics\n
        Linear Algebra I for Mathematical Sciences\n
        Calculus II for Mathematical Sciences</string>
    <string name="math_specialist_first_question">
        Do you have at least a GPA of 2.5 over the following courses?\n
        (Basically an average grade of 70% and above in terms of UTSC grading.)\n
        Discrete Mathematics\n
        Linear Algebra I for Mathematical Sciences\n
        Calculus I for Mathematical Sciences\n
        Calculus II for Mathematical Sciences</string>
    <string name="math_specialist_second_question">
        Do you have a minimum grade of B (73-76%) in at least two of the following?:\n
        Discrete Mathematics\n
        Linear Algebra I for Mathematical Sciences\n
        Calculus II for Mathematical Sciences</string>
    <string name="stats_first_question">
        Do you have at least a GPA of 2.3 over the following courses?\n
        (Basically an average grade of 67% and above in terms of UTSC grading.)\n
        Introduction to Computer Science I OR Introduction to Programming\n
        \n
        Linear Algebra I for Mathematical Sciences\n
        \n
        Calculus I for Mathematical Sciences OR for Physical Sciences\n
        \n
        Calculus II for Mathematical Sciences OR for Physical Sciences</string>
    <string name="title_activity_schedule_events">ScheduleEvents</string>
    <string name="title_activity_feedback_student">FeedbackStudent</string>
    <string name="announcements">Announcements</string>
    <string name="events">Events</string>
    <string name="hello_admin">Hello, Admin!</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="insert_text_here">Insert text here...</string>
    <string name="post">Post</string>
    <string name="my_events">My Events</string>
    <string name="all_events">All Events</string>
    <string name="program_of_study">POSt</string>
    <string name="logout_text">Logout</string>
</resources>