<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige">
    <LinearLayout
        android:id="@+id/adminHomeContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="144dp"
            android:layout_height="136dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/twilight_wave" />

        <Button
            android:id="@+id/adminComplaintsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complaintsHeader"
            android:onClick="onAdminComplaintsButtonClick"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal"/>

        <Button
            android:id="@+id/adminAnnouncementsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announcements"
            android:onClick="onAdminAnnouncementsButtonClick"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal"/>

        <Button
            android:id="@+id/adminEventsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:onClick="onAdminEventsButtonClick"
            android:layout_marginBottom="38dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal"/>

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_admin"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="#086788" />

    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal"
        android:onClick="OnAdminLogoutButtonClick"
        android:text="@string/logout_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
