<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="#086788"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:text="@string/enter_event_info"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventNameLabel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/event_name"
                android:textColor="#086788"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eventNameTextBox2"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_event_name"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColorHint="#FFFFFF" />

            <TextView
                android:id="@+id/eventNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/participant_limit"
                android:textColor="#086788"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/participantLimitTextBox"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_event_participant_limit"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColorHint="#FFFFFF" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/warmWhite"
                android:calendarTextColor="@color/textBlue"
                android:headerBackground="@color/navyBlue"
                android:minDate="11/28/2023" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>