<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="#FFF1D0">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="#086788"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:text="@string/announcements"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/admin_announcements_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/subject"
            android:textColor="#086788"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subjectEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/insert_text_here"
            android:paddingLeft="8dp"
            <!-- android:paddingStart="8dp"
            android:paddingEnd="8dp" -->
            <!-- Jo's code for padding above so idk how it should look like  -->
            android:textColorHint="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/message"
            android:textColor="#086788"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext_background"
            android:gravity="top"
            android:hint="@string/insert_text_here"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:paddingLeft="8dp"
            <!-- android:paddingStart="8dp"
            android:paddingEnd="8dp" -->
            <!-- Jo's code for padding above so idk how it should look like  -->
            android:paddingTop="8dp"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:text="@string/post" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#086788">

        <Button
            android:id="@+id/adminAnnouncementsBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Back"
            android:onClick="OnAdminAnnouncementsBackButtonClick"/>
    </RelativeLayout>
</LinearLayout>
