<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/computer_science_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/do_I_qualify_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/do_I_qualify_heading"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/please_select_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:paddingBottom="20sp"
            android:text="@string/please_select_heading"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/do_I_qualify_heading"
            app:layout_constraintVertical_bias="0.238" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/computer_science_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/computer_science_post"
        app:layout_constraintBottom_toTopOf="@+id/math_major_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <Button
        android:id="@+id/math_major_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/math_major_post"
        app:layout_constraintBottom_toTopOf="@+id/math_specialist_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_science_button" />

    <Button
        android:id="@+id/math_specialist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/math_specialist_post"
        app:layout_constraintBottom_toTopOf="@+id/stats_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math_major_button" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="373dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/stats_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math_specialist_button" />
</androidx.constraintlayout.widget.ConstraintLayout>